# webhook-porto

./: README.md  main.py  pyproject.toml
src/stratosphere_webhook.egg-info/: PKG-INFO  SOURCES.txt
src/webhook/: redis_webhook_server.py  webhook_server.py
stratosphere_webhook.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
