[project]
name = "stratosphere-webhook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "fastapi-pagination>=0.15.6",
    "pydantic[email]>=2.12.5",
    "uvicorn>=0.40.0",
    "requests>=2.32.3",
    "redis>=7.1.0",
]
